src/objects/MUSW__Sequence_Number__c.object
<CustomObject>
    <description>Reset-able numbers and formats for tracking anything visible to constituents</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Control__c</fullName>
        <inlineHelpText>is the number issued permanently (ie. locked and will require an extra Issued_Number__c field), or be overwritten only one more time after being set?</inlineHelpText>
        <label>Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                    <default>true</default>
                    <label>Permanent</label>
                </value>
                <value>
                    <fullName>Overwrite Once</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Date_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>blank (today), or name of a date field on record object. Value of date field will be used when formatting date masks eg. yymmdd. Date field value must never be null</inlineHelpText>
        <label>Date Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>eg. P-{0000} or P-{YYYYMMDD}-{00000} or P-{manual}</inlineHelpText>
        <label>Number Format</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Last_Manual_Entry__c</fullName>
        <description>The last entered manual text. Use as reference when prompting for a new manual text/number. Used only when the track number format includes a {manual} prompt</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The last manually-entered text when issuing this tracking number</inlineHelpText>
        <label>Last Manual Entry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Last_Year_Issued__c</fullName>
        <description>4 digit year when the last number was issued. Used by yearly reset to determine when to reset the number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used for yearly reset numbers. Can be left blank for newly created sequence numbers.</inlineHelpText>
        <label>Last Year Issued</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Mode__c</fullName>
        <description>Automatic or User requested</description>
        <inlineHelpText>Number is automatically issued or user requested</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Auto/Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Next_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The next number that will issued</inlineHelpText>
        <label>Next Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Object__c</fullName>
        <description>Name of object having sequence number field that gets set</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The object that will get the next sequence number. eg MUSW__Permit2__c</inlineHelpText>
        <label>Track Object</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Sequence_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>Name of Sequence field that contains the sequence number to be updated</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The field that will be populated with the generated number eg. Name or MUSW__Tracking_Number__c</inlineHelpText>
        <label>Sequence Field</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Source_Type_Fields__c</fullName>
        <inlineHelpText>The field(s) containing the Source Type value. Required in Auto mode if Source Type is not DEFAULT. Note: Source Type Values are case sensitive.</inlineHelpText>
        <label>Source Type Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MUSW__Type__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Status__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Action_Type__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Current_Status__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Permit_Type__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Work_Type__c</fullName>
                </value>
                <value>
                    <fullName>Application_Type__c</fullName>
                </value>
                <value>
                    <fullName>Credential_Type__c</fullName>
                </value>
                <value>
                    <fullName>Provider_Type__c</fullName>
                </value>
                <value>
                    <fullName>Record_Type_Name__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Track_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>the source type field value that the sequence number counts against. eg. Building or B or left blank (for all records in this track object)</inlineHelpText>
        <label>Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Yearly_Reset__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Reset the next number count back to 1 the first time a sequence number is requested after the last year issued (new year has occured). Good practice to have this true when the number format includes YY or YYYY.</inlineHelpText>
        <label>Yearly Reset</label>
        <type>Checkbox</type>
    </fields>
    <label>Sequence Number</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>MUSW__Next_Number__c</columns>
        <columns>MUSW__Format__c</columns>
        <columns>MUSW__Object__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>MUSW__Date_Field__c</columns>
        <columns>MUSW__Source_Type_Fields__c</columns>
        <columns>MUSW__Sequence_Field__c</columns>
        <columns>MUSW__Mode__c</columns>
        <columns>MUSW__Control__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Appraiser</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MUSW__Auto_Rule_requires_Source_Type_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(MUSW__Mode__c, &apos;Auto&apos;), ISNULL(MUSW__Source_Type_Fields__c),UPPER(Name)!=&apos;DEFAULT&apos;)</errorConditionFormula>
        <errorMessage>Auto Numbers require at least one Source Type Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Type_not_required_if_not_in_Format_mask</fullName>
        <active>true</active>
        <description>If type mask is not included in mask format do not fill in the Type field</description>
        <errorConditionFormula>AND(NOT(CONTAINS(MUSW__Format__c,&apos;{type}&apos;)) ,  MUSW__Type__c != null)</errorConditionFormula>
        <errorMessage>Type not required if Format mask does not contain &apos;{type}&apos;. Clear Type field</errorMessage>
    </validationRules>
</CustomObject>